@@ -1,3 +1,8 @@
+2012-12-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* usecode/ucinternal.cc: Fixed bug #3596110 '"Your hands are too full" even
+	  when carrying no inventory'.
+	* objs/contain.*, objs/objs.h: Use bool instead of int for add_quantity.
+	
 2012-12-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* audio/Midi.cc: Fixing segfault when you change the Midi device type and
 	  disable midi in one go.
